# L2py

./: .env.example  .gitignore  .pythonrc  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  build.py  docker-compose.yml  game_runner.py  login_runner.py  pyproject.toml  requirements.txt  setup.py  sitecustomize.py
common/: Dockerfile  api_handlers.py  config.py  dataclass.py  document.py  json.py  manager.py  packet.py  pyproject.toml  requirements.txt  session.py  setup.py  sitecustomize.py  template.py
common/application_modules/: http.py  module.py  scheduler.py  tcp.py
common/client/: client.py  data_client.py
common/common/: __init__.py  adapter.py  api_handlers.py  application.py  config.py  constants.py  ctype.py  dataclass.py  document.py  json.py  misc.py  model.py  models.pxdx  models.pyxx  packet.py  request.py  response.py  session.py  template.py
common/common/application_modules/: http.py  module.py  scheduler.py  tcp.py
common/common/client/: client.py  data_client.py  login_client.py
common/common/datatypes/: __init__.py  base.py  bytes.py  float.py  integer.py  string.py
common/common/helpers/: bytearray.py  cython.py  http_template.py
common/common/middleware/: length.py  length.pyx  middleware.py
common/common/models/: account.py  game_server.py  id_factory.py
common/common/transport/: packet_transport.py  protocol.py
common/datatypes/: __init__.py  base.py  bytes.py  char.py  float.py  integer.py  string.py
common/helpers/: bytearray.py
common/keys/: blowfish.py  rsa.py  session.py  xor.py
common/middleware/: middleware.py
common/models/: account.py
common/tests/: test_ctype.py
common/transport/: packet_transport.py  protocol.py
common/utils/: blowfish.py  checksum.py  xor.py
data/: Dockerfile  application.py  models.Dockerfile  pyproject.toml  requirements.txt  runner.py  setup.py  setup_models.py
data/api/: __init__.py  account.py  servers.py
data/data/: application.py  config.py  runner.py
data/data/api/: __init__.py  character.py  internal.py  servers.py  static.py
data/data/models/: account.py  character.py  game_server.py  item.py  login_server.py
data/data/models/adapters/: http.py  mongo.py
data/data/models/structures/: __init__.py  world_region.py
data/data/models/structures/character/: attack_buffs.py  character.py  consume_rates.py  effects.py  equipped_items.py  limits.py  reflections.py  resists.py  stats.py  status.py  template.py  updates.py  weapon_vulnerabilities.py
data/data/models/structures/item/: armor.py  etc.py  inventory.py  item.py  weapon.py
data/models/: account.py  character.py
game/: Dockerfile  application.py  build.py  clients.py  config.py  constants.py  event.py  protocol.py  pyproject.toml  requirements.txt  runner.py  session.py  setup.py  states.py
game/api/l2/: __init__.py  characters.py  game.py
game/game/: __main__.py  application.py  broadcaster.py  config.py  constants.py  event.py  periodic_tasks.py  protocol.py  request.py  runner.py  session.py  states.py
game/game/api/: __init__.py  action.py  attack.py  characters.py  friends.py  game.py  macros.py  minimap.py  move.py  party.py  say.py  shortcuts.py  world.py
game/game/api/http/: __init__.py  ping.py
game/game/api/l2/: __init__.py  action.py  characters.py  game.py  minimap.py  move.py  world.py
game/game/data/: armor.json  char_templates.json  weapon.json
game/game/keys/: xor_key.py
game/game/middleware/: xor.py
game/game/models/: __init__.py  character.py  character_template.py  clan.py  item.py  login_server.py  party.py  system_message.py  world.py
game/game/models/structures/: __init__.py  experience.py  macro.py  shortcut.py  system_message.py  world_region.py
game/game/packets/: __init__.py  acquire_skill_info.py  action_failed.py  ally_crest.py  attack.py  auth_login_fail.py  base.py  chage_move_type.py  chair_sit.py  change_wait_time.py  change_wait_type.py  char_create_fail.py  char_create_ok.py  char_delete_fail.py  char_delete_ok.py  char_info.py  char_list.py  char_move_to_location.py  char_selected.py  char_templates.py  creature_say.py  crypt_init.py  delete_object.py  etc_status_update.py  ex_send_manor_list.py  ex_storage_max_count.py  friend_invite.py  friend_list.py  friend_message.py  item_list.py  leave_world.py  logout_ok.py  macros_list.py  move_to_location.py  move_to_pawn.py  my_target_selected.py  net_ping_request.py  open_minimap.py  quest_list.py  restart_response.py  (+11 more)
game/game/static/: armor.py  cache.py  character_template.py  etcitem.py  item.py  npc.py  static.py  weapon.py
game/keys/: xor_key.py
game/packets/: auth_login_fail.py  base.py  chage_move_type.py  chair_sit.py  char_create_fail.py  char_create_ok.py  char_list.py  logout_ok.py  net_ping_request.py  quest_list.py  server_socket_close.py  status_update.py  teleport_to_location.py  user_info.py
gameserver/: client.py  config.py  (+3 more)
login/: Dockerfile  application.py  build.py  clients.py  config.py  pyproject.toml  requirements.txt  runner.py  setup.py
login/api/l2/: login.py
login/crypt/: xor.py
login/keys/: rsa.py  session.py
login/login/: __main__.py  application.py  clients.py  config.py  constants.py  game_watcher.py  protocol.py  runner.py  session.py
login/login/api/: handlers.py  login.py
login/login/api/http/: login.py
login/login/api/l2/: login.py
login/login/crypt/: xor.py
login/login/keys/: blowfish.py  rsa.py  rsa.pyx  session.py  xor.py
login/login/middleware/: checksum.py  checksum.pyx  encryption.py  encryption.pyx  padding.py  padding.pyx  xor.py  xor.pyx
login/login/packets/: account_kicked.py  base.py  gg_auth.py  init.py  login_fail.py  login_ok.py  play_fail.py  play_ok.py  server_list.py
login/packets/: __init__.py  account_kicked.py  init.py  login_ok.py  play_fail.py  server_list.py
(+334 files in other folders)
