[tool.poetry]
name = "l2py_common"
version = "0.1.0"
description = "Lineage2 Interlude game server emulator"
authors = ["Yury Sokov <yury@yurzs.dev>"]
license = "MIT"
packages = [
    {include = "common", from = "."},
]

[tool.poetry.dependencies]
python = "^3.10"
aiojsonapi = "^0.3.1633554756"
motor = "^2.5.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
