[tool.poetry]
name = "data"
version = "0.1.0"
description = "Lineage2 Interlude data server"
authors = ["Yury Sokov <yury@yurzs.dev>"]
license = "MIT"
packages = [
    {include = "data", from = "."},
    {include = "models", from = "data"},
]

[tool.poetry.dependencies]
python = "^3.10"
aiojsonapi = "^0.3.1633554756"
motor = "^2.5.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
