[tool.poetry]
name = "game"
version = "0.1.0"
description = "Lineage2 Interlude game server emulator"
authors = ["Yury Sokov <yury@yurzs.dev>"]
license = "MIT"
packages = [
    {include = "game", from = "."},
]

[tool.poetry.dependencies]
python = "^3.10"
pycryptodomex = "^3.12.0"
aiojsonapi = "^0.3.1633554756"
APScheduler = "^3.8.1"
motor = "^2.5.1"
typeguard = "^2.13.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
