[tool.poetry]
name = "l2py-loginserver"
version = "0.1.0"
description = "Lineage2 Interlude game server emulator"
authors = ["Yury Sokov <yury@yurzs.dev>"]
license = "MIT"
packages = [
    {include = "login", from = "."},
    {include = "common", from = "."},
    {include = "data", from = "."},
]

[tool.poetry.dependencies]
python = "^3.10"
pycryptodomex = "^3.12.0"
M2Crypto = "^0.38.0"
aiojsonapi = "^0.3.1633554756"
APScheduler = "^3.8.1"
motor = "^2.5.1"
blowfish = "^0.6.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
