[tool.poetry]
name = "login"
version = "0.1.0"
description = "Lineage2 Interlude game server emulator"
authors = ["Yury Sokov <yury@yurzs.dev>"]
license = "MIT"
packages = [
    {include = "login", from = "."},
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.10"
pycryptodomex = "^3.12.0"
aiojsonapi = "^0.3.1633554756"
APScheduler = "^3.8.1"
motor = "^2.5.1"
blowfish = "^0.6.1"
Cython = "^0.29.28"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
